# chrysaor

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  clang-tidy.sh  coverage.sh  iwyu.sh  reformat.sh  scan-build.sh
CMakeModules/: CodeCoverage.cmake  CpuMarch.cmake  GMock.cmake  GTest.cmake
doc/: Astronomical_Constants_2016.txt  Fundamental_Physical_Constants_2014.txt
math/orbit/: ecc-from-r1-and-r2-2.rkt  ecc-from-r1-and-r2.rkt  ecc.rkt  ecc.sage  sma-from-r1-and-r2.rkt  sma-from-soe.rkt  sma.rkt  soe-from-r1-and-r2.rkt  soe.rkt  srh.sage
math/test/: generate-circularorbit-params.sage  generate-ellipticalorbit-params.sage
src/: Apoapsis.cpp  Apoapsis.hpp  Apsis.cpp  Apsis.hpp  CMakeLists.txt  CelestialBody.hpp  CubicCurve.hpp  CubicCurvePoint.hpp  LaunchSite.hpp  OrbitalEccentricity.cpp  OrbitalEccentricity.hpp  Periapsis.cpp  Periapsis.hpp  SemiMajorAxis.cpp  SemiMajorAxis.hpp  SpecificOrbitalEnergy.cpp  SpecificOrbitalEnergy.hpp  SpecificRelativeAngularMomentum.cpp  SpecificRelativeAngularMomentum.hpp  Stage.hpp  main.cpp
src/libchrysaor/: Atmosphere.cpp  Atmosphere.hpp  CMakeLists.txt  CelestialBody.cpp  CelestialBody.hpp  CubicCurve.cpp  CubicCurvePoint.cpp  CubicCurvePoint.hpp  FluidDynamics.cpp  FluidDynamics.hpp  IdealGas.cpp  IdealGas.hpp  LaunchSite.cpp  LaunchSite.hpp  SpecificRelativeAngularMomentum.cpp  SpecificRelativeAngularMomentum.hpp  Stage.cpp  Stage.hpp  Vec3.cpp  Vec3.hpp
src/libchrysaor/Curve/: AbstractCurve.hpp  AbstractCurvePoint.cpp  AbstractCurvePoint.hpp  CMakeLists.txt  CubicCurve.cpp  CubicCurve.hpp  CubicCurvePoint.cpp  CubicCurvePoint.hpp  LinearCurvePoint.cpp  LinearCurvePoint.hpp
src/libchrysaor/OrbitalElements/: Apoapsis.cpp  Apoapsis.hpp  Apsis.cpp  Apsis.hpp  CMakeLists.txt  OrbitalEccentricity.cpp  OrbitalEccentricity.hpp  Periapsis.cpp  Periapsis.hpp  SemiMajorAxis.cpp  SemiMajorAxis.hpp  SpecificOrbitalEnergy.cpp  SpecificOrbitalEnergy.hpp
src/libchrysaor/Vehicle/: CMakeLists.txt  Engine.cpp  Engine.hpp  Stage.cpp  Stage.hpp
test/: CMakeLists.txt  CircularOrbit.hpp  EllipticalOrbit.hpp
test/Apsis/: Apsis.cpp  Apsis.hpp  EllipticalOrbit.cpp
test/CelestialBody/: CMakeLists.txt  CelestialBody.cpp
test/CubicCurve/: CMakeLists.txt  CubicCurve.cpp
test/CubicCurvePoint/: CMakeLists.txt  CubicCurvePoint.cpp
test/LaunchSite/: CMakeLists.txt  LaunchSite.cpp
test/OrbitalEccentricity/: CMakeLists.txt  CircularOrbit.cpp  EllipticalOrbit.cpp  OrbitalEccentricity.cpp  OrbitalEccentricity.hpp
test/SemiMajorAxis/: CMakeLists.txt  CircularOrbit.cpp  EllipticalOrbit.cpp  SemiMajorAxis.cpp  SemiMajorAxis.hpp
test/SpecificOrbitalEnergy/: CMakeLists.txt  CircularOrbit.cpp  EllipticalOrbit.cpp  SpecificOrbitalEnergy.cpp  SpecificOrbitalEnergy.hpp  main.cpp
test/SpecificRelativeAngularMomentum/: CMakeLists.txt  CircularOrbit.cpp  EllipticalOrbit.cpp  SpecificRelativeAngularMomentum.cpp  SpecificRelativeAngularMomentum.hpp
test/Stage/: CMakeLists.txt  Stage.cpp
test/Vec3/: CMakeLists.txt  Vec3.cpp  Vec3Cross.cpp  Vec3Dot.cpp  Vec3Norm.cpp  Vec3ScalarOps.cpp  Vec3VectorOps.cpp  main.cpp
test/libchrysaor/: CMakeLists.txt
test/libchrysaor/Atmosphere/: Atmosphere.cpp  CMakeLists.txt  main.cpp
test/libchrysaor/CelestialBody/: CMakeLists.txt  CelestialBody.cpp
test/libchrysaor/CubicCurve/: CMakeLists.txt  CubicCurve.cpp
test/libchrysaor/CubicCurvePoint/: CubicCurvePoint.cpp
test/libchrysaor/Curve/: CMakeLists.txt
test/libchrysaor/Curve/AbstractCurvePoint/: AbstractCurvePoint.cpp  CMakeLists.txt
test/libchrysaor/Curve/CubicCurve/: CubicCurve.cpp
test/libchrysaor/Curve/CubicCurvePoint/: CMakeLists.txt  CubicCurvePoint.cpp
test/libchrysaor/Curve/LinearCurve/: CMakeLists.txt  LinearCurve.cpp
test/libchrysaor/Curve/LinearCurvePoint/: CMakeLists.txt  LinearCurvePoint.cpp
test/libchrysaor/FluidDynamics/: CMakeLists.txt  FluidDynamics.cpp
test/libchrysaor/IdealGas/: CMakeLists.txt  IdealGas.cpp
test/libchrysaor/LaunchSite/: CMakeLists.txt  LaunchSite.cpp
test/libchrysaor/OrbitalElements/: CMakeLists.txt  CelestialBodyData.hpp  EllipticalOrbitData.hpp
test/libchrysaor/OrbitalElements/Apsis/: Apsis.cpp  CMakeLists.txt  EllipticalOrbit.cpp
test/libchrysaor/OrbitalElements/OrbitalEccentricity/: EllipticalOrbit.cpp  OrbitalEccentricity.cpp
test/libchrysaor/OrbitalElements/SemiMajorAxis/: CMakeLists.txt  EllipticalOrbit.cpp  SemiMajorAxis.cpp
test/libchrysaor/OrbitalElements/SpecificOrbitalEnergy/: EllipticalOrbit.cpp  SpecificOrbitalEnergy.cpp
test/libchrysaor/SpecificRelativeAngularMomentum/: CMakeLists.txt  EllipticalOrbit.cpp  SpecificRelativeAngularMomentum.cpp
test/libchrysaor/Stage/: CMakeLists.txt  Stage.cpp
test/libchrysaor/Vec3/: CMakeLists.txt  Vec3.cpp  Vec3Cross.cpp  Vec3Dot.cpp  Vec3Norm.cpp  Vec3ScalarOps.cpp  Vec3VectorOps.cpp
test/libchrysaor/Vehicle/: CMakeLists.txt
test/libchrysaor/Vehicle/Engine/: CMakeLists.txt  Engine.cpp
test/libchrysaor/Vehicle/Stage/: Stage.cpp
