cmake_minimum_required(VERSION 3.5)

add_subdirectory(Vec3)

add_subdirectory(CelestialBody)

add_subdirectory(SpecificRelativeAngularMomentum)

add_subdirectory(SemiMajorAxis)
add_subdirectory(SpecificOrbitalEnergy)
add_subdirectory(OrbitalEccentricity)
add_subdirectory(Apsis)

add_subdirectory(LaunchSite)
add_subdirectory(Stage)
add_subdirectory(CubicCurvePoint)
add_subdirectory(CubicCurve)
